add BearerAuthenticatorMiddleware (#14)
* move decleation

* remove post, delete

* fix description

* set configuration.searchPath

* remove SignIn, SingUp

* fix User Model

* add BearerAuthenticatorMiddleware

* add UserAuthentication

* fix UserAuthentication

* add BearerAuthenticatorMiddleware

* add userID to HTTPField.Name

* add security

* remove add header

* remove testSignUpAndLogin

* format

* Create Upload OpenAPI Action (#13)
