# Sources/Server/API/UserAPI.swift
@@ -14,31 +14,6 @@ extension APIHandler {
     return .ok(.init(body: .json(user.componentUser)))
   }
 
-  func postUser(_ input: Operations.postUser.Input) async throws -> Operations.postUser.Output {
-    guard case .json(let user) = input.body else { return .badRequest(.init()) }
-    try await user.dbUser.create(on: app.db)
-    return .ok(.init(body: .json(user)))
-  }
-
-  func deleteUserByID(_ input: Operations.deleteUserByID.Input) async throws
-    -> Operations.deleteUserByID.Output
-  {
-    guard let userID = UUID(uuidString: input.query.userID) else { return .badRequest(.init()) }
-
-    let userCount = try await User.query(on: app.db)
-      .filter(\.$id, .equal, userID).limit(1).count()
-
-    guard userCount > 0 else {
-      return .notFound(.init())
-    }
-
-    try await User.query(on: app.db)
-      .filter(\.$id, .equal, userID)
-      .delete()
-
-    return .noContent(.init())
-  }
-
   func updateUserByID(_ input: Operations.updateUserByID.Input) async throws
     -> Operations.updateUserByID.Output
   {
@@ -54,16 +29,8 @@ extension APIHandler {
 
     var query = User.query(on: app.db)
 
-    if let firstName = user.firstName {
-      query = query.set(\.$firstName, to: firstName)
-    }
-
-    if let lastName = user.lastName {
-      query = query.set(\.$lastName, to: lastName)
-    }
-
-    if let age = user.age {
-      query = query.set(\.$age, to: age)
+    if let email = user.email {
+      query = query.set(\.$email, to: email)
     }
 
     try await query
